--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,27 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <!-- css link -->
+    <link rel="stylesheet" href="assest/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assest/css/slick.css" /> 
+    <link rel="stylesheet" href="assest/css/slick-theme.css" />
+    <link rel="stylesheet" href="assest/css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="assest/css/owl.theme.default.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assest/css/style.css" />
+    <link rel="stylesheet" href="assest/css/color.css" />
+    <link rel="stylesheet" href="assest/css/responsive.css" />
+
   </head>
   <body>
     <noscript>
@@ -13,5 +34,14 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <!-- js link -->
+    <script src="assest/js/jquery-3.3.1.min.js"></script>
+    <script src="assest/js/bootstrap.min.js"></script>
+    <script src="assest/js/owl.carousel.min.js"></script>
+    <script src="assest/js/slick.min.js"></script>
+    <script src="assest/js/popper.min.js"></script>
+    <script src="assest/js/custom.js"></script>
+
   </body>
 </html>
