--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap"
       rel="stylesheet"
     />
+    <!-- <link rel="stylesheet" href="assest/css/style.css" /> -->
     <link rel="stylesheet" href="assest/css/color.css" />
     <link rel="stylesheet" href="assest/css/responsive.css" />
 
@@ -36,10 +37,10 @@
 
     <!-- js link -->
     <script src="assest/js/jquery-3.3.1.min.js"></script>
-    <script src="assest/js/popper.min.js"></script>
     <script src="assest/js/bootstrap.min.js"></script>
     <script src="assest/js/owl.carousel.min.js"></script>
     <script src="assest/js/slick.min.js"></script>
+    <script src="assest/js/popper.min.js"></script>
     <script src="assest/js/custom.js"></script>
   </body>
 </html>
